Bug 138777 - FILEOPEN XLSX Long data labels in pie chart don’t break
Summary: FILEOPEN XLSX Long data labels in pie chart don’t break
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: OOXML-Chart Pie-and-Donut
  Show dependency treegraph
 
Reported: 2020-12-09 14:26 UTC by NISZ LibreOffice Team
Modified: 2024-10-15 21:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel with long labels in outside and best fit positioning (17.62 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2020-12-09 14:26 UTC, NISZ LibreOffice Team
Details
Example file from Excel with long labels in outside and best fit positioning (145.61 KB, image/png)
2020-12-09 14:27 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-12-09 14:26:49 UTC
Created attachment 168004 [details]
Example file from Excel with long labels in outside and best fit positioning

Attached example file was made to demnostrate how Excel breaks long data labels in pie chart when Outside or Best fit placement are used and the chart area is small.
Calc does not really break the labels, making them in some cases flow out of the chart, and shrinking the charts actual diameter.

Steps to reproduce:
    1. Open attached file

Actual results:
Pie diameter is smaller than in Excel, data labels not broken to multiple lines.

Expected results:
Display should be more like Excel: larger pie and data labels breaking to multiple lines, making the label boxes more tightly packed.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 796c7f612603490dda9277ced0f6ab3cce3bc116
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-12-09 14:27:44 UTC
Created attachment 168005 [details]
Example file from Excel with long labels in outside and best fit positioning
Comment 2 Commit Notification 2020-12-16 17:27:19 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0068342398786ca50304260434a18880dddf74d

tdf#138777 pie chart: improve long data label width

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2021-01-05 15:01:19 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 96bafa464ebdbce3ef04bec9beae5e745bb37794
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!