tdf#138777 pie chart: improve long data label width

to avoid chart distortion.

Reduce the maximum text width of data point label shape based,
because in some cases the long data label flowed out of the chart.

Change-Id: I045c81ecc6ce579e1f472d7ea67e04315ce9c60b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/107585
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>